# simple-kv-agent

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml
autochangelog/: agent.py  tools.py
src/: agent.py  observability.py
