[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netrach"
version = "0.1.0"
description = "Netrach agent framework"
readme = "README.md"
requires-python = ">3.10"
dependencies = [
  "requests==2.32.5",
  "langchain==1.2.3",
  "langchain-groq==1.1.1",
  "langchain-ollama==1.0.1",
  "netra-sdk==0.1.60",
  "rich==14.2.0"
]
license = {text = "MIT"}
authors = [{name = "Milansuman", email = "milansuman2016@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["netrach*"]
exclude = ["netrach.tests*"]

[project.scripts]
netrach = "netrach.agent:main"
